@@ -1,4 +1,8 @@
 2007-03-21  Riccardo Mottola <riccardo@kaffe.org>
+	* DOMRange.*, DOMCSS.h, GNUMakefile:
+	added files from myStep
+
+2007-03-21  Riccardo Mottola <riccardo@kaffe.org>
 	* WebArchive.*, WebDownload.h, GNUMakefile:
 	added files from myStep
 	
